Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52743

[eglfs_kms] When removing a mouse device it is not correctly hiding the cursor to indicate it is not plugged in

    XMLWordPrintable

Details

    Description

      [eglfs_kms] When removing a mouse device it is not correctly hiding the cursor to indicate it is not plugged in. evdevmouse is correctly indicating that it can see the device and that it works, so it is just the removal that is causing a problem here.

      qt.qpa.input: udev device discovery for type QFlags(0x10)
      qt.qpa.input: Found matching devices ("/dev/dri/card0")
      qt.qpa.input: evdevkeyboard: Using device discovery
      qt.qpa.input: udev device discovery for type QFlags(0x8)
      qt.qpa.input: Found matching devices ("/dev/input/event3", "/dev/input/event5", "/dev/input/event1", "/dev/input/event2", "/dev/input/event0")
      qt.qpa.input: Adding keyboard at "/dev/input/event3"
      qt.qpa.input: Try to create keyboard handler for "/dev/input/event3" ""
      qt.qpa.input: Opening keyboard at "/dev/input/event3"
      qt.qpa.input: Create keyboard handler with for device "/dev/input/event3"
      qt.qpa.input: Unload current keymap and restore built-in
      qt.qpa.input: numlock=0 , capslock=0, scrolllock=0
      qt.qpa.input: Adding keyboard at "/dev/input/event5"
      qt.qpa.input: Try to create keyboard handler for "/dev/input/event5" ""
      qt.qpa.input: Opening keyboard at "/dev/input/event5"
      qt.qpa.input: Create keyboard handler with for device "/dev/input/event5"
      qt.qpa.input: Unload current keymap and restore built-in
      qt.qpa.input: numlock=0 , capslock=0, scrolllock=0
      qt.qpa.input: Adding keyboard at "/dev/input/event1"
      qt.qpa.input: Try to create keyboard handler for "/dev/input/event1" ""
      qt.qpa.input: Opening keyboard at "/dev/input/event1"
      qt.qpa.input: Create keyboard handler with for device "/dev/input/event1"
      qt.qpa.input: Unload current keymap and restore built-in
      qt.qpa.input: numlock=0 , capslock=0, scrolllock=0
      qt.qpa.input: Adding keyboard at "/dev/input/event2"
      qt.qpa.input: Try to create keyboard handler for "/dev/input/event2" ""
      qt.qpa.input: Opening keyboard at "/dev/input/event2"
      qt.qpa.input: Create keyboard handler with for device "/dev/input/event2"
      qt.qpa.input: Unload current keymap and restore built-in
      qt.qpa.input: numlock=0 , capslock=0, scrolllock=0
      qt.qpa.input: Adding keyboard at "/dev/input/event0"
      qt.qpa.input: Try to create keyboard handler for "/dev/input/event0" ""
      qt.qpa.input: Opening keyboard at "/dev/input/event0"
      qt.qpa.input: Create keyboard handler with for device "/dev/input/event0"
      qt.qpa.input: Unload current keymap and restore built-in
      qt.qpa.input: numlock=0 , capslock=0, scrolllock=0
      qt.qpa.input: evdevmouse: Using device discovery
      qt.qpa.input: udev device discovery for type QFlags(0x1|0x2)
      qt.qpa.input: Found matching devices ()
      qt.qpa.input: evdevtouch: Using device discovery
      qt.qpa.input: udev device discovery for type QFlags(0x2|0x4)
      qt.qpa.input: Found matching devices ()
      qt.qpa.input: Adding mouse at "/dev/input/event9"
      qt.qpa.input: create mouse handler for "/dev/input/event9" ""
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      evdevmouse: Could not read from input device (No such device)
      qt.qpa.input: Removing mouse at "/dev/input/event9"
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes