eglfs: Support dynamic mouse cursor show/hide with DRM HW cursor

Task-number: QTBUG-52743
Change-Id: I0bea1451dfe7b049c129b11716d593115e3d8374
Reviewed-by: Louai Al-Khanji <louai.al-khanji@qt.io>

cregit: c46f74d325892b0f3b3068241535c32ffe6e3a98 https://github.com/qt/qtbase/commit/c46f74d325892b0f3b3068241535c32ffe6e3a98