src/plugins/platforms/eglfs/deviceintegration/eglfs_kms/qeglfskmscursor.cpp
@@ -1,9 +1,12 @@
 DECL|function|QEglFSKmsCursor
 DECL|function|changeCursor
+DECL|function|hasMouse
 DECL|function|initCursorAtlas
+DECL|function|onDeviceListChanged
 DECL|function|pointerEvent
 DECL|function|pos
 DECL|function|setPos
+DECL|function|updateMouseStatus
 DECL|function|~QEglFSKmsCursor
 DECL|macro|DRM_CAP_CURSOR_HEIGHT
 DECL|macro|DRM_CAP_CURSOR_WIDTH
