src/plugins/platforms/eglfs/deviceintegration/eglfs_kms/qeglfskmscursor.h
@@ -37,12 +37,29 @@
 #include <qpa/qplatformcursor.h>
 #include <QtCore/QList>
 #include <QtGui/QImage>
+#include <QtGui/private/qinputdevicemanager_p.h>
 
 #include <gbm.h>
 
 QT_BEGIN_NAMESPACE
 
 class QEglFSKmsScreen;
+class QEglFSKmsCursor;
+
+class QEglFSKmsCursorDeviceListener : public QObject
+{
+    Q_OBJECT
+
+public:
+    QEglFSKmsCursorDeviceListener(QEglFSKmsCursor *cursor) : m_cursor(cursor) { }
+    bool hasMouse() const;
+
+public slots:
+    void onDeviceListChanged(QInputDeviceManager::DeviceType type);
+
+private:
+    QEglFSKmsCursor *m_cursor;
+};
 
 class QEglFSKmsCursor : public QPlatformCursor
 {
@@ -60,15 +77,26 @@ public:
     QPoint pos() const Q_DECL_OVERRIDE;
     void setPos(const QPoint &pos) Q_DECL_OVERRIDE;
 
+    void updateMouseStatus();
+
 private:
     void initCursorAtlas();
+
+    enum CursorState {
+        CursorDisabled,
+        CursorPendingHidden,
+        CursorHidden,
+        CursorPendingVisible,
+        CursorVisible
+    };
 
     QEglFSKmsScreen *m_screen;
     QSize m_cursorSize;
     gbm_bo *m_bo;
     QPoint m_pos;
     QPlatformCursorImage m_cursorImage;
-    bool m_visible;
+    CursorState m_state;
+    QEglFSKmsCursorDeviceListener *m_deviceListener;
 
     // cursor atlas information
     struct CursorAtlas {
